configs/k8s/base/components/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 3000
  selector:
    app: web
