configs/k8s/base/components/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: stock-analysis
spec:
  ingressClassName: nginx
  rules:
    - host: stock-analysis.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
